...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="irq-MT-yay" id="QIk-qp-lUI"/>
                            <outlet property="delegate" destination="irq-MT-yay" id="ihj-zB-kER"/>
                        </connections>
                    </tableView>
                    <tabBarItem key="tabBarItem" title="Още" image="line.horizontal.3.circle.fill" catalog="system" id="4bz-6P-KBB"/>
                    <navigationItem key="navigationItem" title="Справки" id="MXD-H7-1Mh"/>
                    <connections>
                        <outlet property="tableView" destination="E90-TO-CBH" id="7eP-Iw-vzJ"/>
                        <segue destination="jbK-ys-3ig" kind="show" identifier="changePhoto" id="Ngz-gO-KNw"/>
                        <segue destination="n2q-yE-YkQ" kind="show" identifier="changePassword" id="Q2L-da-u5G"/>
                    </connections>
...
            </objects>
            <point key="canvasLocation" x="1903" y="427"/>
        </scene>
        <!--Профили-->
        <scene sceneID="luM-9e-cLo">
            <objects>
                <tableViewController storyboardIdentifier="profiles" title="Профили" id="MJE-mD-Li1" customClass="ProfilesTableViewController" customModule="e_Student" customModuleProvider="target" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="56G-xs-pVf">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <prototypes>
                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="profileCell" rowHeight="60" id="3n7-NA-UfO" customClass="ProfilesTableViewCell" customModule="e_Student" customModuleProvider="target">
...
                        <connections>
                            <outlet property="dataSource" destination="MJE-mD-Li1" id="lhq-S7-0yM"/>
                            <outlet property="delegate" destination="MJE-mD-Li1" id="ZFg-KO-IoR"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Профили" id="K0k-fA-6mA">
                        <barButtonItem key="leftBarButtonItem" title="Назад" id="udT-jn-rfm">
                            <connections>
                                <action selector="backButtonTapped:" destination="MJE-mD-Li1" id="MXh-gH-HSm"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Редактиране" id="G1o-pF-Ouo">
                            <connections>
...
                            <constraint firstItem="q40-aT-abh" firstAttribute="leading" secondItem="pSf-iD-sxa" secondAttribute="leading" constant="12" id="qva-dy-XUS"/>
                            <constraint firstItem="lfD-d0-kRc" firstAttribute="leading" secondItem="pSf-iD-sxa" secondAttribute="leading" constant="12" id="rvW-2H-Lmc"/>
                            <constraint firstItem="BHn-Va-Y5W" firstAttribute="top" secondItem="lfD-d0-kRc" secondAttribute="bottom" id="vFK-pG-OVf"/>
                            <constraint firstItem="VPO-ps-Kkk" firstAttribute="leading" secondItem="pSf-iD-sxa" secondAttribute="leading" constant="12" id="vnb-9T-xLi"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Начало" image="house.fill" catalog="system" id="fA9-cV-xQC">
                        <imageReference key="selectedImage" image="house.fill" catalog="system" symbolScale="large"/>
                    </tabBarItem>
                    <connections>
                        <outlet property="courseLabel" destination="TqL-DK-T5h" id="sjt-de-yxT"/>
                        <outlet property="emailLabel" destination="gRy-cs-2FP" id="IWz-wr-eon"/>
                        <outlet property="facNumebrLabel" destination="4fQ-b9-3Ec" id="OYt-43-Csu"/>
...
                        <connections>
                            <outlet property="dataSource" destination="Xn7-Z6-MY2" id="fw3-PX-3bn"/>
                            <outlet property="delegate" destination="Xn7-Z6-MY2" id="N5T-qh-FDr"/>
                        </connections>
                    </collectionView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="Дисциплини и оценки" id="Gue-RS-P7x">
                        <barButtonItem key="leftBarButtonItem" title="Начало" id="WR4-Cj-Ea5">
                            <connections>
                                <segue destination="rHZ-bG-WM9" kind="unwind" unwindAction="cancelDisciplineAndMarksViewController:" id="Z6L-fx-GQy"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="rectangle.grid.1x2" catalog="system" id="fiA-Dd-KeS">
                            <connections>
                                <action selector="activeLayout:" destination="Xn7-Z6-MY2" id="XcV-hG-OPr"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
...
