...
    
    
    let mainStoryboard = UIStoryboard(name: "Main", bundle: Bundle.main)
    let dataApiManager = DataApiManager()
    let alertsManager = AlertsManager()
    
    let moreOptions = ["Изучавани Дисциплини", "Заверки", "Смяна на профилна снимка", "Смяна на парола"]
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        
        // Do any additional setup after loading the view.
...
